in line code edit

--- a/index.html
+++ b/index.html
@@ -34,6 +34,13 @@
 
 </ul>
 
+    <ol>
+        <li >the new about the website</li>
+        <li>the contca details about the website</li>
+        <li>the about stage of this website</li>
+    </ol>
+
+
 
     </table>
 </body>
