A quick usage of div containers

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <title>W3 practice</title>
 </head>
 <body>
-    
-    <br>
+    <div>
+    </div>
     <table style="width: 100%;">
-        <caption> <h1>w3 Table Practice</h1></caption>
+        <caption> <h1>W3 SCHOOLS WEB DEV  PRACTICE</h1></caption>
         <tr>
             <th style="width: 50%;" colspan="2">StudentName</th>
             <th>StudentNumber</th>
@@ -24,24 +24,15 @@
             <td>chirimba 3 market</td>
             <td  >cassimmikchi@gmai.com</td>
             <td>34</td>
+            <td>78</td>
         </tr>
-        <br>
-<ul >
-    <li>  <a href="Home">Home</a></li>
-     <li>  <a href="Services">Services</a></li>
-      <li>  <a href="News">News</a></li>
-       <li>  <a href="Contact">Contact</a></li>
-
-</ul>
-
-    <ol>
-        <li >the new about the website</li>
-        <li>the contca details about the website</li>
-        <li>the about stage of this website</li>
-    </ol>
-
-
-
     </table>
+<br>
+<div   style="background-color: black; color: beige; padding: 20px;"  >
+<h1>The  Practice Process</h1>
+<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam fugiat possimus molestias, perferendis facilis illo placeat ex vitae modi repudiandae labore hic adipisci assumenda sequi debitis tempora ratione ullam ea.</p>
+<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione sit harum facere laudantium alias tempora unde cumque, quo commodi provident doloribus eos neque molestias similique maiores soluta obcaecati rerum sunt?</p>
+</div>
+
 </body>
 </html>
