Addigng an Iframe HTML file Practice

--- a/index.html
+++ b/index.html
@@ -34,5 +34,7 @@
 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione sit harum facere laudantium alias tempora unde cumque, quo commodi provident doloribus eos neque molestias similique maiores soluta obcaecati rerum sunt?</p>
 </div>
 
+<iframe src="" frameborder="0"></iframe>
+
 </body>
 </html>
