Adding the website footer

--- a/index.html
+++ b/index.html
@@ -33,8 +33,14 @@
 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam fugiat possimus molestias, perferendis facilis illo placeat ex vitae modi repudiandae labore hic adipisci assumenda sequi debitis tempora ratione ullam ea.</p>
 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione sit harum facere laudantium alias tempora unde cumque, quo commodi provident doloribus eos neque molestias similique maiores soluta obcaecati rerum sunt?</p>
 </div>
-
-<iframe src="" frameborder="0"></iframe>
-
+<br>
+<iframe src="Iframepage1.html" width="400px" height="400px" title="This is a Frame " ></iframe>
+<iframe src="Iframepage1.html" width="400px" height="400px" title="This is a Frame " name="iframepager" ></iframe>
+<br>
+<a href="https://www.w3schools.com" target="iframepager"> ww3 schools.com here</a>
+<div  class="footer">
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem harum inventore quis iusto odit repellendus! Sit perspiciatis fugiat vero explicabo 
+         quidem, consequatur velit porro ex ratione odio perferendis accusantium!</p>
+</div>
 </body>
 </html>
